politicas/infra/deployment-release-1.0.0-pj.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: politicas-pj
  namespace: estudos
  labels:
    app: politicas
    version: release-1.0.0
    service-mesh: pj
spec:
  replicas: 1
  selector:
    matchLabels:
      app: politicas
      version: release-1.0.0
      service-mesh: pj
  template:
    metadata:
      labels:
        app: politicas
        version: release-1.0.0
        service-mesh: pj
    spec:
      containers:
        - name: politicas-container
          image: politicas:release-1.0.0
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: "512Mi"
              cpu: "75m"
            requests:
              memory: "248Mi"
              cpu: "25m"
          ports:
            - containerPort: 8080
